# text

./: CMakeLists.txt  Makefile  README.md  kilo.c
src/: append.c  append.h  commands.c  commands.h  common.c  common.h  defines.h  editor.c  editor.h  file.c  file.h  find.c  find.h  init.c  init.h  input.c  input.h  kilo.c  output.c  output.h  row.c  row.h  syntax.c  syntax.h  terminal.c  terminal.h  typedefs.h
